# EraDosFidalgos

./: .gitignore  CMakeLists.txt  CMakePresets.json  FlecsConfig.cmake  GLMConfig.cmake  ImGuiConfig.cmake  README.md  TOML.cmake  shell.nix
.github/workflows/: cmake-multi-platform.yml
Assets/: DiploEvents.toml  Names.toml  PowerEvents.toml
Shaders/: Base.frag  Base.vert  Chess.frag  Chess.vert  HeatMap.frag  Map.frag  Political.frag  Political.vert
Source/: Game.cpp  Game.h  Game.hpp  ImGUIConfig.hpp  Main.cpp  Random.cpp  Random.h  Random.hpp
Source/Actors/: Army.h  Event.h  MapTile.h  Settlement.h
Source/Components/: AnimatorComponent.cpp  AnimatorComponent.h  Army.hpp  Camera.cpp  Camera.h  Camera.hpp  Culture.hpp  Dynasty.cpp  Dynasty.hpp  Geograph.hpp  Province.cpp  Province.hpp  RectComponent.cpp  RectComponent.h  RectComponent.hpp  Window.cpp  Window.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h
Source/Entities/: Army.h  Event.h  MapTile.h  Settlement.h  Settlement.hpp
Source/Renderer/: Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  VertexArray.cpp
Source/Systems/: Army.cpp  Army.hpp  Characters.cpp  Characters.hpp  ChessBoard.cpp  ChessBoard.h  ChessBoard.hpp  Diplomacy.cpp  Diplomacy.hpp  DrawProvinces.cpp  DrawProvinces.hpp  EstatePower.cpp  EstatePower.hpp  Events.cpp  Events.h  Events.hpp  GameBoard.cpp  GameBoard.hpp  GameTime.cpp  GameTime.hpp  MapGenerator.hpp  ProvinceRevenue.cpp  ProvinceRevenue.hpp  ProvinceUpdate.cpp  ProvinceUpdate.hpp  Sound.cpp  Sound.hpp
Source/UI/: GameOver.cpp  GameOver.hpp
Source/UI/UIScreens/: GameUI.cpp  GameUIModule.cpp  GameUIModule.hpp  MainMenu.cpp  MainMenu.hpp  PauseMenu.cpp  PauseMenu.hpp  TestUI.cpp  TestUI.hpp  UICommon.cpp  UICommon.hpp
build_windows/: build-windows.sh  mingw-toolchain.cmake  windows.nix
